samples/_failures_safe/1761413296_fbc4a7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c41ac980.c: In function ‘display_sorted_logs’:
./samples/SAFE/__tmp_c41ac980.c:136: error: expected ‘)’ at end of input
./samples/SAFE/__tmp_c41ac980.c:135:8: note: to match this ‘(’
  135 |     if (sorted == NULL
      |        ^
./samples/SAFE/__tmp_c41ac980.c:135:5: error: expected declaration or statement at end of input
  135 |     if (sorted == NULL
      |     ^~
